# proof-burrower

./: .envrc  .gitignore  .guix-channel  0-AI-MANIFEST.a2ml  Cargo.toml  Containerfile  EXPLAINME.adoc  Justfile  PROOF-NEEDS.md  PROOF-STATUS.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  READINESS.md  README.adoc  TEMPLATE-STANDARDS-AUDIT.adoc  TEST-NEEDS.md  flake.nix  guix.scm  rust-toolchain.toml
affinescript/: .gitattributes  .gitignore  ABI-FFI-README.md  ALPHA-1-RELEASE-NOTES.md  BACKEND-ANALYSIS.md  BACKEND-IMPLEMENTATION.md  CNAME  CODE_OF_CONDUCT.md  COMPILER-CAPABILITIES.md  CONTRIBUTING.md  CONTROLS-REFERENCE.md  DAMAGE-SYSTEM.md  EXPLAINME.adoc  FIXES_2026-01-23.md  GAME-BUNDLING-STRATEGY.md  Justfile  LICENSING-GUIDE.md  MODULE-SYSTEM-PROGRESS.md  NAVIGATION.adoc  PHASE3-ASSESSMENT.md  PHASE3-COMPLETE.md  PHASE3-SESSION-SUMMARY.md  PROOF-NEEDS.md  README.adoc  REPLY-SUM-TYPES.md  ROADMAP.adoc  SECURITY-SETUP.md  SECURITY.md  SESSION-2026-01-23.md  SESSION-COMPLETE.md  TRAIT_SYSTEM_STATUS.md  affinescript.opam  affinescript.runbook.a2ml  dune-project  humans.txt  opsm.toml  panic-attack.toml  run_wasm.js  test_if.affine  test_min.affine  (+3 more)
affinescript/.build/: .ocamlformat  Justfile  affinescript.opam
affinescript/.claude/: CLAUDE.md  PROJECT.md
affinescript/.github/workflows/: casket-pages.yml  ci.yml  codeql.yml  guix-nix-policy.yml  hypatia-scan.yml  npm-bun-blocker.yml  quality.yml  release.yml  rsr-antipattern.yml  scorecard-enforcer.yml  scorecard.yml  secret-scanner.yml  security-policy.yml  semgrep.yml  ts-blocker.yml  wellknown-enforcement.yml  workflow-linter.yml
affinescript/.machine_readable/: ADJUST.contractile  CLADE.a2ml  INTENT.contractile  MUST.contractile  TRUST.contractile
affinescript/.machine_readable/6a2/: ECOSYSTEM.a2ml  META.a2ml  STATE.a2ml
affinescript/.machine_readable/agent_instructions/: README.adoc  coverage.a2ml  debt.a2ml  methodology.a2ml
affinescript/.machine_readable/anchors/: ANCHOR.a2ml
affinescript/.machine_readable/bot_directives/: README.adoc  debt.a2ml
affinescript/.machine_readable/contractiles/: Intentfile.a2ml
affinescript/.machine_readable/integrations/: verisimdb.a2ml  vexometer.a2ml
affinescript/.well-known/: dnt-policy.txt  security.txt  trust.txt
affinescript/.well-known/groove/: manifest.json
affinescript/LICENSES/: LICENSE  LICENSE-AGPL-3.0
affinescript/SPARK-experiment/: README.adoc
affinescript/bench/: dune
affinescript/conformance/: README.md
affinescript/conformance/invalid/: 001_unclosed_brace.affine  001_unclosed_brace.expected  002_unclosed_string.affine  002_unclosed_string.expected  003_bad_number.affine  003_bad_number.expected  004_unexpected_token.affine  004_unexpected_token.expected  005_missing_arrow.affine  005_missing_arrow.expected  006_bad_operator.affine  006_bad_operator.expected  007_incomplete_effect.affine  007_incomplete_effect.expected  008_mismatched_parens.affine  008_mismatched_parens.expected  009_reserved_keyword.affine  009_reserved_keyword.expected  010_empty_match.affine  010_empty_match.expected  011_bad_escape.affine  011_bad_escape.expected  012_trailing_comma.affine  012_trailing_comma.expected
affinescript/conformance/valid/: 001_empty.affine  001_empty.expected  002_comments.affine  003_let_bindings.affine  003_let_bindings.expected  004_literals.affine  004_literals.expected  005_functions.affine  005_functions.expected  006_type_alias.affine  006_type_alias.expected  007_struct_def.affine  007_struct_def.expected  008_enum_def.affine  008_enum_def.expected  009_effect_def.affine  009_effect_def.expected  010_pattern_match.affine  010_pattern_match.expected  011_rows.affine  011_rows.expected  012_ownership.affine  012_ownership.expected
affinescript/distributions/rattlescript/: Cargo.toml  Justfile  README.adoc  build.rs
affinescript/docs/: ALIB-INTEGRATION.md  BRIDGE-DECISIONS.md  CITATIONS.adoc  DESIGN-VISION.adoc  EFFECTS-IMPLEMENTATION.md  README.adoc  WASM-EFFECT-HANDLER-WORKAROUND.md  ads.txt  app-ads.txt  humans.txt  spec.md
affinescript/docs/.well-known/: keybase.txt  sellers.json
affinescript/docs/academic/: README.md
affinescript/docs/alib/: README.md
affinescript/docs/governance/: SECURITY.md
affinescript/docs/guides/: TESTING-REPORT.adoc  TESTING-REPORT.scm  WHAT-MAKES-IT-BRILLIANT.md  frontier-guide.adoc
affinescript/docs/history/: TYPECHECKER-COMPLETION-2026-01-23.md
affinescript/docs/specs/: SETTLED-DECISIONS.adoc  SPEC.md  faces.md
affinescript/docs/standards/: DECISIONS.md  RELEASE.md  ROADMAP.md
affinescript/examples/: comprehensive_test.affine  counter.afs  effects.affine  exception_test.affine  hello.affine  ownership.affine  rows.affine  simple_test.affine  titlescreen.afs  traits.affine  typecheck_complete_test.affine  typecheck_features_test.affine
affinescript/js/: dune  js_api.ml  playground.ml  runtime.js
affinescript/lib/: ast.ml  borrow.ml  codegen.ml  codegen_gc.ml  desugar_traits.ml  dune  effect.ml  effect.mli  error.ml  error_collector.ml  error_formatter.ml  error_formatter.mli  face.ml  face.mli  formatter.ml  formatter.mli.disabled  interp.ml  js_face.ml  json_output.ml  julia_codegen.ml  lexer.ml  linter.ml  linter.mli.disabled  lsp_server.ml  module_loader.ml  opt.ml  parse.ml  parse_driver.ml  parser.mly  parser_errors.ml  python_face.ml  quantity.ml  repl.ml  resolve.ml  sexpr_dump.ml  span.ml  symbol.ml  tea_bridge.ml  tea_cs_bridge.ml  tea_router.ml  (+13 more)
affinescript/runtime/: Cargo.toml
affinescript/site/: index.md
affinescript/stdlib/: Core.affine  Math.affine  Option.affine  README.md  Result.affine  collections.affine  effects.affine  io.affine  math.affine  option.affine  prelude.affine  result.affine  string.affine  testing.affine  traits.affine
affinescript/test/: dune  test_e2e.ml  test_golden.ml  test_lexer.ml  test_main.ml
affinescript/tools/: alib_conformance_gen.jl  run_codegen_wasm_tests.sh
affinescript/wiki/: README.md
crates/burrower-cli/: Cargo.toml
crates/burrower-core/: Cargo.toml
crates/burrower-wasm/: Cargo.toml
(+397 files in other folders)
