# SPDX-License-Identifier: PMPL-1.0-or-later
[workspace]
resolver = "2"
members = [
    "crates/burrower-core",
    "crates/burrower-cli",
    "crates/burrower-wasm",
]

[workspace.package]
version     = "0.0.1"
edition     = "2021"
authors     = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
license     = "PMPL-1.0-or-later"
repository  = "https://github.com/hyperpolymath/proof-burrower"

[workspace.dependencies]
anyhow      = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
clap        = { version = "4", features = ["derive"] }
walkdir     = "2"
regex       = "1"

# Wasm release profile — optimise for size, used by burrower-wasm.
[profile.release]
opt-level   = "s"
lto         = true
strip       = true
