; SPDX-License-Identifier: MIT OR AGPL-3.0-or-later

(executable
 (name playground)
 (modes js)
 (modules playground js_api)
 ; `unix` is listed explicitly because the affinescript library pulls
 ; in Unix from interp.ml's filesystem/env builtins (opendir, mkdir,
 ; rmdir, putenv).  Without it js_of_ocaml aborts linking with
 ; "Could not find compilation unit for Unix".  js_of_ocaml ships a
 ; Unix shim that stubs the unsupported calls — acceptable for a
 ; browser playground since those builtins are never reached from
 ; playground_of_string.
 (libraries affinescript js_of_ocaml unix str)
 (preprocess
  (pps js_of_ocaml-ppx))
 (js_of_ocaml
  (compilation_mode whole_program)
  (javascript_files runtime.js)
  (flags
   (:standard --enable=effects --source-map))))
