# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2024-2025 hyperpolymath
# Copyright 2024-2025 AffineScript Contributors

[package]
name = "affinescript-runtime"
version = "0.1.0"
edition = "2021"
authors = ["AffineScript Contributors"]
description = "Runtime library for AffineScript, compiled to WebAssembly"
license = "MIT OR AGPL-3.0-or-later"
repository = "https://github.com/hyperpolymath/affinescript"
keywords = ["affinescript", "runtime", "wasm"]
categories = ["wasm", "no-std"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = []
# Enable small garbage collector for cyclic ω-quantity data
gc = []
# Enable WASI support
wasi = ["dep:wasi"]

[dependencies]
# Small allocator for WASM (talc replaces unmaintained wee_alloc)
talc = { version = "4", optional = true, default-features = false }

# WASI bindings (optional)
wasi = { version = "0.11", optional = true }

[dev-dependencies]
# Testing
wasm-bindgen-test = "0.3"

[profile.release]
# Optimize for size in WASM
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[profile.release-speed]
inherits = "release"
opt-level = 3
