# SPDX-License-Identifier: PMPL-1.0-or-later
# Copyright 2024 AffineScript Contributors

[package]
name = "affine-doc"
version = "0.1.0"
edition = "2021"
description = "Documentation generator for AffineScript"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/affinescript/affinescript"
keywords = ["documentation", "affinescript"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# HTML generation
askama = "0.12"
pulldown-cmark = "0.9"

# Syntax highlighting
syntect = "5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Path handling
camino = "1"
walkdir = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Search index
tantivy = "0.21"

# HTTP server (for preview)
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower-http = { version = "0.5", features = ["fs"], optional = true }

[features]
default = []
serve = ["dep:axum", "dep:tokio", "dep:tower-http"]

[[bin]]
name = "affine-doc"
path = "src/main.rs"
