# SPDX-License-Identifier: PMPL-1.0-or-later
[package]
name = "affinescript-dap"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "affinescript_dap"
path = "src/lib.rs"

[[bin]]
name = "affinescript-dap"
path = "src/main.rs"

[dependencies]
# DAP
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Affinescript compiler components
affinescript-syntax = { path = "../../src/syntax" }
affinescript-core = { path = "../../src/core" }
