# SPDX-License-Identifier: PMPL-1.0-or-later
# Copyright 2024 AffineScript Contributors

[package]
name = "affinescript-lsp"
version = "0.1.0"
edition = "2021"
description = "Language Server Protocol implementation for AffineScript"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/affinescript/affinescript"
keywords = ["lsp", "language-server", "affinescript", "ide"]
categories = ["development-tools", "text-editors"]

[dependencies]
# LSP protocol types
tower-lsp = "0.20"
lsp-types = "0.94"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Path handling
camino = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Regex for parsing diagnostics
regex = "1"

# UUID for temp files
uuid = { version = "1", features = ["v4"] }

# TODO: Add affinescript compiler as dependency once published
# affinescript-compiler = { path = "../../" }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "affinescript-lsp"
path = "src/main.rs"
